마이페이지  CSS 변경

--- a/checkmate/templates/main.html
+++ b/checkmate/templates/main.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% load static %}
-<div class="container">
+<div>
 
         <div class="content-top">
             <div class="text">
