--- a/checkmate/templates/mypageScrap.html
+++ b/checkmate/templates/mypageScrap.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-
+<div class="mypage_container bg">
 <div class="mypage_nav">
     <h3>마이페이지</h3>
     <!-- border-left 색상 바꾸기 (클릭 모션) -->
@@ -11,7 +11,7 @@
     <a href="">스크랩 목록</a>
     <a href="">내가 작성한 글</a>
 </div>
-<div>
+<div class="mypage_content">
     <h3>스크랩</h3>
     <button>수정</button>
     <div>
@@ -34,13 +34,15 @@
         </ul>
     </div>
     <a href="">삭제하기</a>
-
+</div>
 
 </div>
+
 <img class="open" id="jsBtn" src="{% static 'img/chat_icon.png' %}" alt="">
 <div class="modal hidden" id="jsModal">
     <button class="modal__closeBtn" id="jsCloseBtn">X</button>
 </div>
+
 
 
 <script>
@@ -59,4 +61,5 @@
 
     init();
 </script>
+
 {% endblock %}
