--- a/checkmate/templates/mypageWritten.html
+++ b/checkmate/templates/mypageWritten.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+<div class="mypage_container bg">
 <div class="mypage_nav">
     <h3>마이페이지</h3>
     <!-- border-left 색상 바꾸기 (클릭 모션) -->
@@ -10,7 +11,7 @@
     <a href="">스크랩 목록</a>
     <a href="">내가 작성한 글</a>
 </div>
-<div>
+<div class="mypage_content">
     <h3>내가 작성한 글</h3>
     <button>수정</button>
     <div>
@@ -58,4 +59,5 @@
 
     init();
 </script>
+</div>
 {% endblock %}
