--- a/static/css/survey.css
+++ b/static/css/survey.css
@@ -101,6 +101,7 @@ h3{
 
 .question > .title{
     margin-bottom: 30px;
+    font-size: 30px;
 }
 
 /* input-radio */
@@ -110,11 +111,12 @@ input[type=radio]{
 
 input[type=radio]+label{
     font-family: 'S-CoreDream-7ExtraBold';
+    font-size: 20px;
     color: #254074;
     background-color: white;
-    padding: 4px 8px;
+    padding: 10px 15px;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
+    border-radius: 8px;
 }
 
 input[type=radio]:checked+label{
@@ -126,15 +128,18 @@ input[type=radio]:checked+label{
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
 }
-
+/* 
 input[type=radio]+label:hover{
     padding: 8px 16px;
     font-size: 18px;
-}
+} */
 
 /* input-number */
 input[type=number]{
+    font-size: 20px;
+    color: #254074;
     border-radius: 5px;
     border: 0px;
+    width: 10vw;
 }
 
