--- a/roommate/templates/searchRoommate.html
+++ b/roommate/templates/searchRoommate.html
@@ -5,6 +5,7 @@
 <h3>룸메 찾기</h3>
 <button>룸메추천받기</button>
 <button>필터적용하기</button>
+<a href="{% url 'create' %}">새로 만들기</a>
 <!-- 필터 -->
 <small>*내가 원하는 룸메에 대해 적어주세요</small>
 <div>
@@ -23,13 +24,14 @@
 
 </div>
 <div>
+    {% for write in writes.all %}
     <div>
-        <p>매칭완료</p>
+        <!-- <p>매칭완료</p>
         <p>기숙사 | 남 | 20세</p>
         <p>안녕하세요. 룸메이트 구합니다. </p>
-        <p>80%</p>
+        <p>80%</p> -->
     </div>
-
+    {% endfor %}
 </div>
 <div>
     <ul class="pagination">
