--- a/roommate/templates/detail.html
+++ b/roommate/templates/detail.html
@@ -27,7 +27,7 @@
         </p>
         <div>
             <div>
-                <strong>기상 시간</strong>
+                <strong>기상 시간</strong> {{survey_ess.wakeup_time}}
                 <p></p>
                 <strong>취침 시간</strong>
                 <p></p>
