--- a/static/css/survey.css
+++ b/static/css/survey.css
@@ -94,19 +94,30 @@ h3{
 }
 
 .question{
-    padding: 40px;
-    text-align: center;
+    padding: 30px;
+    /* text-align: center; */
     /* border-bottom: 1px solid white; */
 }
 
 .question > .title{
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    /* height: 10vh; */
     font-size: 30px;
+}
+
+.question > .answer{
+    /* margin-top:30px; */
+    height: 6vh;
+    
+    width: 60vw;
+    display: table-cell;
+    vertical-align: bottom;
 }
 
 /* input-radio */
 input[type=radio]{
     opacity: 0%;
+    /* margin: 50px; */
 }
 
 input[type=radio]+label{
@@ -123,16 +134,27 @@ input[type=radio]:checked+label{
     font-family: 'S-CoreDream-7ExtraBold';
     color: #254074;
     background-color: white;
-    padding: 8px 16px;
-    font-size: 18px;
+    padding: 10px 15px;
+    font-size: 25px;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
+    border-radius: 8px;
 }
-/* 
+
 input[type=radio]+label:hover{
-    padding: 8px 16px;
-    font-size: 18px;
-} */
+    animation-duration: 0.1s;
+    animation-name: btnZoomIn;
+    animation-fill-mode: forwards;
+}
+
+@keyframes btnZoomIn{
+    from{
+        font-size: 20px;
+    }
+    to{
+        font-size: 25px;
+    }
+}
+
 
 /* input-number */
 input[type=number]{
