--- a/checkmate/templates/main.html
+++ b/checkmate/templates/main.html
@@ -17,7 +17,7 @@
             <div class="menu-1">
                 <h1 class="title">룸메이트 찾기</h1>
                 <p class="detail">룸메이트 찾기를 등록한 사람들 중<br>나의 룸메를 찾아보세요</p>
-                <button>
+                <button onclick="location.href='roommate/searchRoommate'">
                     <p>바로가기 ></p>
                     <img src="" alt=""> <!-- 화살표 이미지 추가 -->
                 </button>
@@ -25,7 +25,7 @@
                 <div class="menu-2">
                     <h1 class="title">정보공유하기</h1>
                     <p class="detail">기숙사, 원룸 정보를 공유 해주세요</p>
-                    <button>
+                    <button onclick="location.href='community'">
                         <p>바로가기 ></p>
                         <img src="" alt=""> <!-- 화살표 이미지 추가 -->
                     </button>
