--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -65,7 +65,7 @@
             <div class="question dormitory-date">
                 <h2 class="title">룸메이트와 함께할 기간을 입력해주세요!</h1>
                 <div class="answer">
-                    <select name="dormitory-year-start">
+                    <select name="dormitory-year-start" class="form-select">
                         <option value="2021">2021</option>
                     </select>
                     <select name="dormitory-semester-start">
