검색기능 완료

--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -14,7 +14,7 @@
             {% csrf_token %}
             <input type="hidden" name="kakao_id", value="{{ kakao_id }}">
             <!-- 미디어로 받기 -->
-            아이디 <br><input type="text" id="userid" name="userid"><br><br><br>
+            아이디 <br><input type="text" id="username" name="username"><br><br><br>
             비밀번호 <br><input type="password" id="password1" name="password1"><br><br><br>
             비밀번호 확인 <br><input type="password" id="password2" name="password2"><br><br><br>
             <!-- 비밀번호 조건
