--- a/roommate/templates/detail.html
+++ b/roommate/templates/detail.html
@@ -88,7 +88,7 @@
 <div>
     <ul class="pagination">
         <li class="page-item"><a class="page-link" href="#">◀ 이전글</a></li>
-        <li class="page-item"><a class="page-link" href="#">목록</a></li>
+        <li class="page-item"><a class="page-link" href="/roommate/searchRoommate">목록</a></li>
         <li class="page-item"><a class="page-link" href="#">다음글 ▶</a></li>
     </ul>
 </div>
