--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -19,7 +19,15 @@
         <h3 class="title-login">LOGIN</h3>
         <div class="login-box">
             <form action="" method="post">
+                
                 {% csrf_token %}
+                <p>
+                    {% if messages %}
+                        {% for message in messages %}
+                            {{ message.message }}
+                        {% endfor %}
+                    {% endif %}
+                </p>
                 <p>ID</p> <br> <input name="username" type="text">
                 <br><br><br>
                 <p>PASSWORD</p> <br> <input name="password" type="password">
