--- a/static/css/survey.css
+++ b/static/css/survey.css
@@ -54,7 +54,7 @@ h3{
     opacity: 0.5;
 }
 
-h3:nth-child(2){
+.second{
     padding: 100px 100px;
     
 }
@@ -279,7 +279,24 @@ input[type=submit]{
     border: 3px;
     --borderWidth: 3px;
     background-color: white;
+    opacity: 0.5;
     border-radius: 50px;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.25);
     margin-bottom: 100px;
 }
+
+.submit:hover{
+    animation-duration: 0.1s;
+    animation-name: animatedSubmitBtn;
+    animation-fill-mode: forwards;
+}
+
+@keyframes animatedSubmitBtn{
+    from{
+        opacity: 0.5;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
