--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -164,6 +164,7 @@
                     <input type="checkbox" id="animal-dog" name="animal" value='0'><label for="animal-dog">강아지</label>
                     <input type="checkbox" id="animal-cat" name="animal" value='1'><label for="animal-cat">고양이</label>
                     <label>기타</label><input type="text" id="animal-other" name="animal-other">
+                    <input type="checkbox" id="animal-no" name="animal" value='2'><label for="animal-no">없음</label>
                 </div>
             </div>
             <!-- 선택요소 -->
@@ -238,6 +239,9 @@
             </div>
         </form>
         <p class="next">다음 ></p>
+    </div>
+    <div class="modal" style="display: none;">
+        <p>값을 선택해 주세요!</p>
     </div>
 
     <!-- js -->
