--- a/static/css/survey.css
+++ b/static/css/survey.css
@@ -19,6 +19,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'S-CoreDream-4Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-4Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -52,11 +59,6 @@ body{
 h3{
     font-family: 'S-CoreDream-3Light';
     opacity: 0.5;
-}
-
-.second{
-    padding: 100px 100px;
-    
 }
 
 /* 왼쪽 상단 타이틀 */
@@ -300,3 +302,25 @@ input[type=submit]{
     }
 }
 
+.modal{
+    position: fixed;
+    left: 35vw;
+    top: 43vh;
+    width: 30vw;
+    height: 8vh;
+    background-color: white;
+    border-radius: 10px;
+    margin: 0px auto;
+    display: flex;
+    align-items: center;
+    opacity: 0.9;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.25);
+
+}
+
+.modal > p{
+    font-family: 'S-CoreDream-4Regular';
+    color: rgb(82, 82, 82);
+    width: 100%;
+    text-align: center;
+}
