--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -125,7 +125,7 @@
                     <input type="checkbox" id="snoring" name="sleeping-habits-snoring" value="True"><label for="snoring">코골이</label>
                     <input type="checkbox" id="grinding-teeth" name="sleeping-habits-teeth" value="True"><label for="grinding-teeth">이갈이</label>
                     <label for="other">기타</label><input type="text" id="other" name="sleeping-habits-other">
-                    <input type="checkbox" id="nothing" name="sleeping-habits-nothing"><label for="nothing">없음</label>
+                    <input type="checkbox" id="nothing" name="sleeping-habits-nothing" class="nothing"><label for="nothing">없음</label>
                 </div>
             </div>
             <div class="question invite-friends">
@@ -164,7 +164,7 @@
                     <input type="checkbox" id="animal-dog" name="animal" value='0'><label for="animal-dog">강아지</label>
                     <input type="checkbox" id="animal-cat" name="animal" value='1'><label for="animal-cat">고양이</label>
                     <label>기타</label><input type="text" id="animal-other" name="animal-other">
-                    <input type="checkbox" id="animal-no" name="animal" value='2'><label for="animal-no">없음</label>
+                    <input type="checkbox" id="animal-no" name="animal" value='2' class=".nothing"><label for="animal-no">없음</label>
                 </div>
             </div>
             <!-- 선택요소 -->
