필터 일부완성, account model 추가

--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -144,10 +144,10 @@
                 </div>
             </div>
             <div class="question earphones">
-                <h2 class="title">방안에서 이어폰을 사용하길 원하시나요?</h1>
+                <h2 class="title">방안에서 이어폰을 사용하시나요?</h1>
                 <div class="answer">
-                    <input type="radio" id="earphones-yes" name="earphones" value="True"><label for="earphones-yes">필수</label>
-                    <input type="radio" id="earphones-no" name="earphones" value="False"><label for="earphones-no">상관없음</label>
+                    <input type="radio" id="earphones-yes" name="earphones" value="True"><label for="earphones-yes">사용함</label>
+                    <input type="radio" id="earphones-no" name="earphones" value="False"><label for="earphones-no">사용안함</label>
                 </div>
             </div>
             <div class="question eat">
